--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 13:05:02 2018</p>
+         Last Run: Fri Nov 23 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -30,51 +30,51 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>5</td>
-                        <td>78</td>
+                        <td>7</td>
+                        <td>79</td>
                         <td>1</td>
                         <td>6</td>
                         <td>S</td>
-                        <td>63</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>5</td>
-                        <td>71</td>
+                        <td>6</td>
+                        <td>73</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>58</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>4</td>
-                        <td>68</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>S</td>
-                        <td>46</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>69</td>
                         <td>0</td>
                         <td>10</td>
+                        <td>S</td>
+                        <td>23</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Clear</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>6</td>
+                        <td>71</td>
+                        <td>0</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>38</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -104,7 +104,7 @@
                "data":[
                  "-4",
                  "-4",
-                 "-3",
+                 "-4",
                  "-4"
                ]
              },
@@ -117,7 +117,7 @@
                "data":[
                  "-2",
                  "-1",
-                 "0",
+                 "-1",
                  "-1"
                ]
              }
@@ -176,10 +176,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "4",
-                 "5"
+                 "7",
+                 "6",
+                 "6",
+                 "6"
                ]
              },
              {
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "71",
-                 "68",
-                 "69"
+                 "79",
+                 "73",
+                 "69",
+                 "71"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
-                 "58",
-                 "46",
-                 "38"
+                 "59",
+                 "41",
+                 "23",
+                 "18"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 13:05:02 2018</p>
+         Last Run: Fri Nov 23 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -265,22 +265,22 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>2</td>
-                        <td>58</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>39</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>2</td>
-                        <td>0</td>
-                        <td>2</td>
-                        <td>56</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -292,11 +292,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>55</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>37</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,8 +323,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-3",
                  "-2",
-                 "0",
                  "0"
                ]
              },
@@ -335,8 +335,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "0",
                  "1",
-                 "2",
                  "2"
                ]
              }
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "56",
-                 "55"
+                 "61",
+                 "59",
+                 "57"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "39",
+                 "43",
                  "38",
-                 "37"
+                 "35"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 13:05:02 2018</p>
+         Last Run: Fri Nov 23 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,39 +479,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>5</td>
-                        <td>82</td>
+                        <td>6</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>93</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>4</td>
-                        <td>82</td>
+                        <td>6</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>S</td>
-                        <td>93</td>
+                        <td>SSW</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>4</td>
-                        <td>85</td>
+                        <td>6</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>S</td>
-                        <td>90</td>
+                        <td>SSW</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,9 +609,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "4",
-                 "4"
+                 "6",
+                 "6",
+                 "6"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "82",
-                 "85"
+                 "83",
+                 "83",
+                 "86"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
-                 "93",
-                 "90"
+                 "73",
+                 "70",
+                 "68"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 13:05:02 2018</p>
+         Last Run: Fri Nov 23 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-3</td>
+                        <td>Clear</td>
+                        <td>-2</td>
+                        <td>-4</td>
                         <td>6</td>
-                        <td>76</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>40</td>
+                        <td>W</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
                         <td>-3</td>
+                        <td>-6</td>
                         <td>6</td>
-                        <td>77</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
                         <td>-4</td>
+                        <td>-7</td>
                         <td>10</td>
-                        <td>80</td>
+                        <td>86</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>45</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,9 +753,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
-                 "-3",
-                 "-4"
+                 "-4",
+                 "-6",
+                 "-7"
                ]
              },
              {
@@ -765,9 +765,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
-                 "-1",
-                 "-2"
+                 "-2",
+                 "-3",
+                 "-4"
                ]
              }
            ]
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "77",
-                 "80"
+                 "81",
+                 "82",
+                 "86"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
-                 "43",
-                 "45"
+                 "29",
+                 "31",
+                 "33"
                ]
              }
            ]
