--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 18:05:02 2018</p>
+         Last Run: Fri Nov 23 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -50,19 +50,19 @@
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>41</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>Partly Cloudy</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>6</td>
                         <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>27</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -70,7 +70,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -104,7 +104,7 @@
                "data":[
                  "-5",
                  "-4",
-                 "-3",
+                 "-4",
                  "-4"
                ]
              },
@@ -117,7 +117,7 @@
                "data":[
                  "-2",
                  "-1",
-                 "0",
+                 "-1",
                  "-1"
                ]
              }
@@ -191,7 +191,7 @@
                  "80",
                  "74",
                  "70",
-                 "72"
+                 "73"
                ]
              },
              {
@@ -201,8 +201,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "63",
-                 "41",
-                 "27",
+                 "45",
+                 "30",
                  "24"
                ]
              }
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 18:05:02 2018</p>
+         Last Run: Fri Nov 23 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -283,8 +283,8 @@
                         <td>58</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>24</td>
+                        <td>SW</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -417,7 +417,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "27",
-                 "24",
+                 "23",
                  "18"
                ]
              }
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 18:05:02 2018</p>
+         Last Run: Fri Nov 23 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,11 +483,11 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>82</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -507,10 +507,10 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>6</td>
-                        <td>84</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SSW</td>
+                        <td>S</td>
                         <td>71</td>
                      </tr>
                   </tbody>
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "83",
                  "82",
-                 "82",
-                 "84"
+                 "85"
                ]
              },
              {
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
+                 "75",
                  "72",
                  "71"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 18:05:02 2018</p>
+         Last Run: Fri Nov 23 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,35 +698,35 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>7</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>41</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>-2</td>
+                        <td>-5</td>
                         <td>7</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>42</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>11</td>
-                        <td>86</td>
+                        <td>7</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>42</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,7 +754,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-6",
+                 "-5",
                  "-6"
                ]
              },
@@ -766,7 +766,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-3",
+                 "-2",
                  "-3"
                ]
              }
@@ -826,7 +826,7 @@
                "data":[
                  "7",
                  "7",
-                 "11"
+                 "7"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "83",
-                 "86"
+                 "82",
+                 "84",
+                 "88"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "42",
-                 "42"
+                 "43",
+                 "43",
+                 "43"
                ]
              }
            ]
