--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 19:05:02 2018</p>
+         Last Run: Fri Nov 23 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>63</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -48,7 +48,7 @@
                         <td>6</td>
                         <td>74</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>S</td>
                         <td>45</td>
                      </tr>
@@ -58,7 +58,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
@@ -70,7 +70,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -190,8 +190,8 @@
                "data":[
                  "80",
                  "74",
-                 "70",
-                 "73"
+                 "71",
+                 "72"
                ]
              },
              {
@@ -200,7 +200,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
+                 "64",
                  "45",
                  "30",
                  "24"
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 19:05:02 2018</p>
+         Last Run: Fri Nov 23 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>1</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>27</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -283,8 +283,8 @@
                         <td>58</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>23</td>
+                        <td>WSW</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -292,11 +292,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>18</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -407,7 +407,7 @@
                "data":[
                  "60",
                  "58",
-                 "57"
+                 "56"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "23",
-                 "18"
+                 "25",
+                 "21",
+                 "16"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 19:05:02 2018</p>
+         Last Run: Fri Nov 23 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,11 +483,11 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
-                        <td>75</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -507,7 +507,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>6</td>
-                        <td>85</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
+                 "81",
                  "82",
-                 "85"
+                 "84"
                ]
              },
              {
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
+                 "74",
                  "72",
                  "71"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 19:05:02 2018</p>
+         Last Run: Fri Nov 23 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,7 +698,7 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>7</td>
-                        <td>82</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
@@ -710,7 +710,7 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>7</td>
-                        <td>84</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -722,7 +722,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>7</td>
-                        <td>88</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "80",
                  "82",
-                 "84",
-                 "88"
+                 "86"
                ]
              },
              {
